--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:paddingBottom="10dp"
-    android:layout_margin="30dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/verifyotp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/otp"
         android:textSize="32sp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:padding="20dp"
+        android:paddingBottom="10dp"
+        android:layout_margin="30dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <RelativeLayout
+        android:id="@+id/otp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/verifyotp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -33,7 +39,8 @@
                 android:textSize="28sp"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:maxLength="1"/>
+                android:maxLength="1"
+                android:layout_margin="10dp"/>
             <EditText
                 android:id="@+id/otp2"
                 android:layout_width="32dp"
@@ -41,7 +48,8 @@
                 android:textSize="28sp"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:maxLength="1" />
+                android:maxLength="1"
+                android:layout_margin="10dp" />
             <EditText
                 android:id="@+id/otp3"
                 android:layout_width="32dp"
@@ -49,7 +57,8 @@
                 android:textSize="28sp"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:maxLength="1"/>
+                android:maxLength="1"
+                android:layout_margin="10dp"/>
             <EditText
                 android:id="@+id/otp4"
                 android:layout_width="32dp"
@@ -57,24 +66,134 @@
                 android:textSize="28sp"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:maxLength="1"/>
-
+                android:maxLength="1"
+                android:layout_margin="10dp"/>
         </LinearLayout>
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/change_number"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/otp"
+        app:layout_constraintBottom_toBottomOf="parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textAlignment="textEnd"
-            android:textStyle="italic|bold"
-            android:text="Want to use another number?"/>
-    </RelativeLayout>
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+        </LinearLayout>
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="6"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="7"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="9"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                android:textSize="20sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="24sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Confirm"
+                android:lines="1"
+                android:textSize="16sp"
+                android:layout_margin="15dp"
+                android:background="@color/transparent"/>
+        </LinearLayout>
+    </LinearLayout>
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
