--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -15,15 +16,16 @@
         android:padding="20dp"
         android:paddingBottom="10dp"
         android:layout_margin="30dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/otp"/>
 
     <RelativeLayout
         android:id="@+id/otp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/verifyotp">
+        android:layout_marginBottom="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/verifyotp"
+        app:layout_constraintBottom_toTopOf="@+id/numberpad">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -32,39 +34,39 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp">
 
-            <EditText
+            <TextView
                 android:id="@+id/otp1"
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
-                android:inputType="number"
+                android:text="_"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp"/>
-            <EditText
+            <TextView
                 android:id="@+id/otp2"
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
-                android:inputType="number"
+                android:text="_"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp" />
-            <EditText
+            <TextView
                 android:id="@+id/otp3"
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
-                android:inputType="number"
+                android:text="_"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp"/>
-            <EditText
+            <TextView
                 android:id="@+id/otp4"
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
-                android:inputType="number"
+                android:text="_"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp"/>
@@ -73,6 +75,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/numberpad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/otp"
@@ -81,13 +84,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
             <Button
+                android:id="@+id/no1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
@@ -95,6 +100,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2"
@@ -102,6 +108,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3"
@@ -116,6 +123,7 @@
             android:orientation="horizontal"
             android:gravity="center">
             <Button
+                android:id="@+id/no4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="4"
@@ -123,6 +131,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5"
@@ -130,6 +139,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="6"
@@ -144,6 +154,7 @@
             android:orientation="horizontal"
             android:gravity="center">
             <Button
+                android:id="@+id/no7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7"
@@ -151,6 +162,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8"
@@ -158,6 +170,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9"
@@ -172,6 +185,7 @@
             android:orientation="horizontal"
             android:gravity="center">
             <Button
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Back"
@@ -179,6 +193,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/no0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
@@ -186,6 +201,7 @@
                 android:layout_margin="15dp"
                 android:background="@color/transparent"/>
             <Button
+                android:id="@+id/confirm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Confirm"
