--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:alpha="0.7"/>
 
     <TextView
         android:id="@+id/verifyotp"
@@ -12,6 +17,7 @@
         android:layout_height="wrap_content"
         android:text="@string/otp"
         android:textSize="32sp"
+        android:textColor="@color/colorHamAlertCardBackground"
         android:textAlignment="center"
         android:padding="20dp"
         android:paddingBottom="10dp"
@@ -40,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
                 android:text="_"
+                android:textColor="@color/colorHamAlertCardBackground"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp"/>
@@ -49,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
                 android:text="_"
+                android:textColor="@color/colorHamAlertCardBackground"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp" />
@@ -58,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
                 android:text="_"
+                android:textColor="@color/colorHamAlertCardBackground"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp"/>
@@ -67,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="28sp"
                 android:text="_"
+                android:textColor="@color/colorHamAlertCardBackground"
                 android:textAlignment="center"
                 android:maxLength="1"
                 android:layout_margin="10dp"/>
@@ -98,15 +108,18 @@
                 android:text="1"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"
+                />
             <Button
                 android:id="@+id/no2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="true"
+                android:clickable="true"
                 android:text="2"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
             <Button
                 android:id="@+id/no3"
                 android:layout_width="wrap_content"
@@ -114,7 +127,7 @@
                 android:text="3"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
         </LinearLayout>
 
         <LinearLayout
@@ -129,7 +142,7 @@
                 android:text="4"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
             <Button
                 android:id="@+id/no5"
                 android:layout_width="wrap_content"
@@ -137,7 +150,7 @@
                 android:text="5"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
             <Button
                 android:id="@+id/no6"
                 android:layout_width="wrap_content"
@@ -145,7 +158,7 @@
                 android:text="6"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
         </LinearLayout>
 
         <LinearLayout
@@ -168,7 +181,7 @@
                 android:text="8"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
             <Button
                 android:id="@+id/no9"
                 android:layout_width="wrap_content"
@@ -176,7 +189,7 @@
                 android:text="9"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
         </LinearLayout>
 
         <LinearLayout
@@ -189,9 +202,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Back"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
             <Button
                 android:id="@+id/no0"
                 android:layout_width="wrap_content"
@@ -199,7 +212,7 @@
                 android:text="0"
                 android:textSize="24sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
             <Button
                 android:id="@+id/confirm"
                 android:layout_width="wrap_content"
@@ -208,7 +221,7 @@
                 android:lines="1"
                 android:textSize="16sp"
                 android:layout_margin="15dp"
-                android:background="@color/transparent"/>
+                android:background="?android:attr/selectableItemBackground"/>
         </LinearLayout>
     </LinearLayout>
     </RelativeLayout>
