--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -1,80 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:paddingBottom="10dp"
-    android:layout_margin="30dp">
+    app:cardCornerRadius="24dp">
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/otp"
-        android:textSize="32sp"
-        android:textAlignment="center"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp">
-
-            <EditText
-                android:id="@+id/otp1"
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:textSize="28sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:maxLength="1"/>
-            <EditText
-                android:id="@+id/otp2"
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:textSize="28sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:maxLength="1" />
-            <EditText
-                android:id="@+id/otp3"
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:textSize="28sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:maxLength="1"/>
-            <EditText
-                android:id="@+id/otp4"
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:textSize="28sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:maxLength="1"/>
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:paddingBottom="10dp">
 
         <TextView
-            android:id="@+id/change_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textAlignment="textEnd"
-            android:textStyle="italic|bold"
-            android:text="Want to use another number?"/>
-    </RelativeLayout>
+            android:text="@string/otp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"/>
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/otp1"
+                    android:layout_width="32dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/otp2"
+                    android:layout_width="32dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/otp3"
+                    android:layout_width="32dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/otp4"
+                    android:layout_width="32dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/change_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Want to use another number?"
+                android:textAlignment="textEnd"
+                android:textSize="14sp"
+                android:textStyle="italic|bold" />
+        </RelativeLayout>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
