--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -63,53 +63,57 @@
         app:layout_constraintGuide_percent=".34" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/es_nested_sv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/es_guide_heading"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/e_summit_date">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/es_about_rect"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/ic_curved_rect"
-                android:layout_marginEnd="5dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/es_about_detail"/>
-
-            <TextView
-                android:id="@+id/es_about_text"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textAlignment="center"
-                android:text="@string/about_es_19"
-                android:padding="5dp"
-                android:textSize="30sp"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <TextView
-                android:id="@+id/es_about_detail"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/es_about_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/es_intro"
-                android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@id/es_about_text"/>
+                android:layout_margin="10dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/es_about_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:padding="5dp"
+                    android:text="@string/about_es_19"
+                    android:textAlignment="center"
+                    android:textSize="30sp"/>
+
+                <TextView
+                    android:id="@+id/es_about_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:padding="10dp"
+                    android:text="@string/es_intro"
+                    android:textSize="16sp"
+                    android:autoSizeTextType="uniform"
+                    tools:targetApi="o" />
+
+            </androidx.cardview.widget.CardView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/es_speaker_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/es_about_rect"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginTop="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/es_about_cardview" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
