--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.about_us.ContactUs">
+    tools:context=".fragments.aboutUs.ContactUs">
 
     <ScrollView
         android:layout_width="match_parent"
