--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/acme</item>
         <item>@font/alfa_slab_one</item>
+        <item>@font/andika</item>
         <item>@font/bungee_shade</item>
+        <item>@font/corben</item>
+        <item>@font/lemon</item>
+        <item>@font/montserrat_subrayada</item>
         <item>@font/noto_sans_bold</item>
         <item>@font/nova_round</item>
         <item>@font/pt_sans</item>
