--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,10 +24,12 @@
     <color name="aboutusToolbarBg">#5AB1D8</color>
     <color name="aboutusCardBg">#4DA7CF</color>
     <color name="colorHamAlertCardBackground">#2f2f2f</color>
+    <color name="black">#000</color>
 
     <color name="blue">#3498DB</color>
     <color name="light_blue">#85C1E9</color>
     <color name="green">#1D8348</color>
     <color name="forgot_button">#ffac5d</color>
+    <color name="change_pass_button">#ff3ea7</color>
 
 </resources>
