--- a/app/src/main/res/layout/fragment_change_pass.xml
+++ b/app/src/main/res/layout/fragment_change_pass.xml
@@ -7,13 +7,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.forgotPassword.EmailFragment"
-    android:background="#ff3ea7">
+    android:background="#FFCFA2">
 
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@drawable/ic_lock_design"
-        android:layout_marginTop="60dp"
+        app:srcCompat="@drawable/ic_key_design"
+        android:layout_marginTop="40dp"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="20dp"
@@ -34,10 +34,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:text="Forgot Your Password?"
+        android:text="Set New Password"
         android:textAlignment="center"
         android:textSize="35sp"
-        android:fontFamily=""
+        android:textStyle="bold"
+        android:fontFamily="@font/acme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forgot_guide" />
@@ -47,12 +48,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
-        android:layout_marginTop="20dp"
-        android:textSize="18sp"
+        android:layout_marginTop="30dp"
+        android:textSize="20sp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:textAlignment="center"
-        android:text="No Problem . . .\nYou just need to enter your registered Email-ID to Reset your Password"
+        android:text="Enter a New Password for your\nE-Cell account"
         app:layout_constraintTop_toBottomOf="@id/forgot_title"/>
 
     <androidx.constraintlayout.widget.Guideline
@@ -60,35 +61,59 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.65"/>
+        app:layout_constraintGuide_percent="0.5"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/forgot_email_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        app:boxStrokeColor="@color/forgot_button"
-        app:boxCornerRadiusTopEnd="10dp"
-        app:boxCornerRadiusTopStart="10dp"
-        app:boxCornerRadiusBottomStart="10dp"
-        app:boxCornerRadiusBottomEnd="10dp"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide"
-        app:boxBackgroundColor="@color/colorWhite">
+        app:layout_constraintBottom_toTopOf="@id/forgot_button_guide">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/change_number_layout"
+            style="@style/ForgotTextInputLayoutStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:inputType="textEmailAddress"
-            android:paddingStart="25dp"
-            android:paddingEnd="25dp"
-            android:hint="Registered Email" />
+            app:boxBackgroundColor="#FFCFA2">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:inputType="textPassword"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:hint="New Password" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/change_confirm_layout"
+            style="@style/ForgotTextInputLayoutStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:boxStrokeColor="@color/forgot_button"
+            app:boxBackgroundColor="#FFCFA2">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:inputType="textEmailAddress"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:hint="Confirm Password" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/forgot_button_guide"
@@ -111,7 +136,7 @@
         android:textSize="30sp"
         app:cornerRadius="30dp"
         app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
-        app:rippleColor="#FFA500"
+        app:rippleColor="#5d65ff"
         tools:layout_editor_absoluteX="150dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
