--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="casual"
         android:layout_marginTop="20dp"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:textAlignment="center"
@@ -63,18 +63,12 @@
         app:layout_constraintGuide_percent="0.65"/>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:theme="@style/TextLabel"
         android:id="@+id/forgot_email_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/ForgotTextInputLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        app:boxStrokeColor="@color/forgot_button"
-        app:boxCornerRadiusTopEnd="10dp"
-        app:boxCornerRadiusTopStart="10dp"
-        app:boxCornerRadiusBottomEnd="10dp"
-        app:boxCornerRadiusBottomStart="10dp"
-        app:boxBackgroundColor="@color/colorWhite"
+        app:boxBackgroundColor="#ff68a2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide">
@@ -82,11 +76,14 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:inputType="textEmailAddress"
+            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:inputType="textEmailAddress|textNoSuggestions"
             android:paddingStart="25dp"
-            android:hint="Registered Email"
-            tools:ignore="RtlSymmetry" />
+            android:paddingEnd="25dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:hint="Registered Email" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,7 +108,7 @@
         android:textSize="30sp"
         app:cornerRadius="30dp"
         app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
-        app:rippleColor="#FFA500"
+        app:rippleColor="#5d65ff"
         tools:layout_editor_absoluteX="150dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
